--- a/views/pages/list.haml
+++ b/views/pages/list.haml
@@ -3,3 +3,5 @@
     - for page in @pages
       %li
         %a{ :href => "/pages/#{page.short_name}" }= page.title
+  #add-page-form
+    %a{ :onClick => "add_and_bind_page_form($(this).parent());" } +page
