Make the colored status tags have rounded corners

--- a/views/style.sass
+++ b/views/style.sass
@@ -28,6 +28,8 @@ ul
           :margin-top 3px
           :width 5em
           :text-align right
+          :-moz-border-radius 2px
+          :-webkit-border-radius 2px
         .text
           :float left
       #add-content-form
