Got rid of notes, replaced with task with status 'note'

--- a/views/pages/show.haml
+++ b/views/pages/show.haml
@@ -1,7 +1,6 @@
 %h2= @page.title
 %ul
-  - for content in @page.contents
-    = haml_for content
+  - for task in @page.tasks
+    = haml :'tasks/show', :layout => false, :locals => { :task => task }
 #add-content-form
-  %a{ :onClick => "add_and_bind_form($(this).parent(), \"#{@page.short_name}\", \"note\");" } +note
   %a{ :onClick => "add_and_bind_form($(this).parent(), \"#{@page.short_name}\", \"task\");" } +task
