--- a/views/style.sass
+++ b/views/style.sass
@@ -17,7 +17,7 @@ ul
     :width = 85%
     .content
       :padding 10px
-      .task, .note
+      .task
         :clear left
         .status
           :float left
