Updated forms to no longer use 'type'

--- a/views/style.sass
+++ b/views/style.sass
@@ -32,7 +32,7 @@ ul
           :-webkit-border-radius 2px
         .text
           :float left
-      #add-content-form
+      #add-task-form
         :clear left
 #footer
   :clear both
