--- a/views/pages/show.haml
+++ b/views/pages/show.haml
@@ -2,5 +2,5 @@
 %ul
   - for task in @page.tasks
     = haml :'tasks/show', :layout => false, :locals => { :task => task }
-#add-content-form
-  %a{ :onClick => "add_and_bind_form($(this).parent(), \"#{@page.short_name}\", \"task\");" } +task
+#add-task-form
+  %a{ :onClick => "add_and_bind_form($(this).parent(), \"#{@page.short_name}\");" } +new
