--- a/views/tasks/new.haml
+++ b/views/tasks/new.haml
@@ -1,4 +1,4 @@
-%form{ :name => 'task', :action => "/pages/#{short_name}/contents/new", :id => 'task_form', :method => 'post' }
+%form{ :name => 'task', :action => "/pages/#{short_name}/tasks/new", :id => 'task_form', :method => 'post' }
   %select{ :name => 'task[status]', :id => 'task_status' }
     - for status in statuses
       %option= status
