Allow setting title from route

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,7 +7,7 @@
   %script{ :type => 'text/javascript', :src=> '/scripts/script.js' }
 %body
   #header
-    %h1 TaskSoup
+    %h1= @title || "TaskSoup"
   #body
     #sidebar
       .content
