--- a/views/tasks/new.haml
+++ b/views/tasks/new.haml
@@ -1,9 +1,9 @@
 %form{ :name => 'task', :action => "/projects/#{short_name}/tasks/new", :id => 'task_form', :method => 'post' }
-  %select{ :name => 'task[status]', :id => 'task_status' }
+  %select{ :name => 'task[status_id]', :id => 'task_status' }
     - for chain_name, chain_statuses in statuses
       %optgroup{ :label =>  chain_name }
         - for status in chain_statuses
-          %option= status
+          %option{ :value => status.id, :selected => status.name == 'todo' }= status.name
   %input{ :name => 'task[text]', :type => 'text', :id => 'task_text' }
   %input{ :type => 'submit', :value => 'Add', :id => 'task_submit' }
   %input{ :type => 'button', :value => 'Expand', :id => 'task_expand' }
