Text and status have double-click to edit.

--- a/views/tasks/show.haml
+++ b/views/tasks/show.haml
@@ -1,4 +1,4 @@
-%li.task{ :class => task.status.name }
+%li.task{ :class => task.status.name, :id => task.id }
   .status= task.status.name
   .text
     :maruku
