--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,6 +4,7 @@
   %link{ :rel => 'stylesheet', :type => 'text/css', :href => '/style.css' }/
   %script{ :type => 'text/javascript', :src=> '/scripts/jquery-1.3.2.js' }
   %script{ :type => 'text/javascript', :src=> '/scripts/jquery.form.js' }
+  %script{ :type => 'text/javascript', :src=> '/scripts/jquery.jeditable.js' }
   %script{ :type => 'text/javascript', :src=> '/scripts/script.js' }
 %body
   #header
