Changed edit-in-place to click to edit.

--- a/views/tasks/new.haml
+++ b/views/tasks/new.haml
@@ -1,10 +1,11 @@
-%form{ :name => 'task', :action => "/projects/#{short_name}/tasks/new", :id => 'task_form', :method => 'post' }
+%form{ :name => 'task', :action => @submit_to, :id => 'task_form', :method => 'post' }
   %select{ :name => 'task[status_id]', :id => 'task_status' }
     - for chain_name, chain_statuses in statuses
       %optgroup{ :label =>  chain_name }
         - for status in chain_statuses
-          %option{ :value => status.id, :selected => status.name == 'todo' }= status.name
-  %input{ :name => 'task[text]', :type => 'text', :id => 'task_text' }
-  %input{ :type => 'submit', :value => 'Add', :id => 'task_submit' }
+          %option{ :value => status.id, :selected => task.status ? status.name == task.status.name : status.name == 'todo' }= status.name
+  %input{ :name => 'task[text]', :type => 'text', :id => 'task_text', :value => task.text }
+  %input{ :name => 'task[parent_id]', :type => 'hidden', :id => 'task_parent_id', :value => task.parent_id }
+  %input{ :name => 'save', :type => 'submit', :value => 'Save', :id => 'task_submit' }
   %input{ :type => 'button', :value => 'Expand', :id => 'task_expand' }
-  %input{ :type => 'button', :value => 'Cancel', :id => 'task_cancel' }
+  %input{ :name => 'cancel', :type => 'submit', :value => 'Cancel', :id => 'task_cancel' }
