--- a/views/style.sass
+++ b/views/style.sass
@@ -5,6 +5,12 @@ ul
   :list-style-type none
 .add_link
   :cursor pointer
+.hover > .controls > a
+  :display block !important
+  :background #acbdd2
+  :margin 1px
+  :-moz-border-radius 1px
+  :-webkit-border-radius 1px
 #header
   :padding 10px
   :border-bottom 3px solid #999
@@ -23,6 +29,15 @@ ul
         :clear left
         .task
           :clear left
+          .controls
+            :width 2em
+            :float left
+            :min-height 16px
+            :margin-top 3px
+            :text-align center
+            a
+              :font-size 80%
+              :font-family monospace
           .status
             :float left
             :font-family monospace
@@ -50,8 +65,6 @@ ul
 
 h2
   :border-bottom 3px solid black
-
-
 
 /*********************/
 /* Task List Styling */
