Tasks list view with basic filtering

--- a/views/style.sass
+++ b/views/style.sass
@@ -107,6 +107,13 @@ ul
             a
               :font-size 80%
               :font-family monospace
+          .parent
+            :float left
+            :width 7em
+            :font-size 80%
+            :text-align right
+            :overflow hidden
+            :height 1em
           .status
             :float left
             :font-family monospace
